force-app/main/default/objects/smagicinteract__Interface_Details__mdt/smagicinteract__Interface_Details__mdt.object-meta.xml
<CustomObject>
    <label>Interface Details</label>
    <pluralLabel>Interface Details</pluralLabel>
</CustomObject>