force-app/main/default/objects/smagicinteract__Interface_Details__mdt/fields/smagicinteract__Description__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Description__c</fullName>
    <label>Description</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>