force-app/main/default/objects/smagicinteract__Interface_Details__mdt/fields/smagicinteract__Interface_Category__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Interface_Category__c</fullName>
    <label>Interface Category</label>
    <referenceTo>smagicinteract__Interface_Category__mdt</referenceTo>
    <relationshipLabel>Interface Details</relationshipLabel>
    <relationshipName>Interface_Details</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>