force-app/main/default/objects/smagicinteract__Interface_Details__mdt/fields/smagicinteract__isInactive__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__isInactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created for marking the interface detail as invalid so that it should not be shown on UI.</description>
    <label>isInactive</label>
    <type>Checkbox</type>
</CustomField>