force-app/main/default/objects/smagicinteract__Interface_Details__mdt/fields/smagicinteract__Source_Code__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Source_Code__c</fullName>
    <label>Source Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>